// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CFocusTrap CFocusTrap with custom props 1`] = `
<div>
  <div
    data-testid="custom-container"
  >
    Custom Content
  </div>
</div>
`;

exports[`CFocusTrap loads and displays CFocusTrap component 1`] = `
<div>
  <div
    data-testid="test-content"
  >
    Test Content
  </div>
</div>
`;
